gt_plot() is out due to errors. New function win_prop() is in. See NEWS.md.

--- a/vignettes/toolbox.Rmd
+++ b/vignettes/toolbox.Rmd
@@ -130,4 +130,17 @@ Reads REDCap data accounting for events and repeated instruments. Based on `libr
 
 Please see [the vignette on REDCap](https://agdamsbo.github.io/stRoke/articles/redcap.html).
 
+### win_prob()
+
+The `win_prob()` is an implementation of the Tournament Method for calculating the probability of winning as suggested by [Zou et al 2022](https://doi.org/10.1161/STROKEAHA.121.037744). The authors has included a spreadsheet as supplementary materials. This function aims to mimic that functionality. The function also includes a `print()` extension for nice printing.
+
+```{r win_prob-example}
+win_prob(
+  data = stRoke::talos,
+  response = "mrs_6",
+  group = "rtreat",
+  sample.size = TRUE,
+  print.tables = TRUE
+)
+```
 
