--- a/vignettes/toolbox.Rmd
+++ b/vignettes/toolbox.Rmd
@@ -1,8 +1,9 @@
 ---
-title: "Toolbox introduction"
+title: "Toolbox"
+date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Introduction}
+  %\VignetteIndexEntry{Toolbox}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
